--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "hooks",
+  "name": "service-now-api",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "materialize-css": "^1.0.0-rc.2",
-    "react": "^17.0.0-rc.1",
-    "react-dom": "^17.0.0-rc.1",
-    "react-materialize": "^3.9.3",
+    "axios": "^0.20.0",
+    "qs": "^6.9.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-hooks-middleware": "^0.2.4",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
